contact-me not displaying well on mobile, fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -696,7 +696,8 @@ p {
 
 @media all and (max-width: 575.98px) {
     .form-container { 
-     width: 100%;
+     width: 80%;
+     top:45%;
     }
 }
 
